--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="assets/img/favicon.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="assets/img/logo-ct-dark.png">
+  <link rel="icon" type="image/png" href="assets/img/logo-ct-dark.png">
   <title>
     ECOsuelos
   </title>
@@ -32,6 +32,7 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">   
+   <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 
    <!-- Icon Font Stylesheet -->
    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -50,20 +51,12 @@
 </head>
 
 <body class="index-page bg-gray-200">
-  <style>
-    .bg-amarillo{
-      background-color: #EDDD5E;
-    }
-    .text-amarillo{
-      color: #EDDD5E;
-    }
-  </style>
-  
 <!-- Navbar -->
   <div class="container position-sticky z-index-sticky top-0"><div class="row"><div class="col-12">
   <nav class="navbar navbar-expand-lg  blur border-radius-xl top-0 z-index-fixed shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
     <div class="container-fluid px-0">
-      <a class="navbar-brand font-weight-bolder ms-sm-3" href="index.html" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom" target="_blank">
+      <a class="navbar-brand font-weight-bolder ms-sm-3" href="index.html" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom" >
+        <img src="assets/img/logo-ct-dark.png" alt="">
       <span class="text-xxl">ECOsuelos</span> 
       </a>
       <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -113,19 +106,19 @@
               <div class="d-none d-lg-block">
                 <ul class="list-group">
                   <li class="nav-item list-group-item border-0 p-0">
-                    <a  href="pages/grupo1.html"  class="dropdown-item py-2 ps-3 border-radius-md" href=" https://www.creative-tim.com/learning-lab/bootstrap/overview/material-kit ">
+                    <a  href="pages/grupo1.html"  class="dropdown-item py-2 ps-3 border-radius-md">
                       <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Grupo 1</h6>
                       <!-- <span class="text-sm">All about overview, quick start, license and contents</span> -->
                     </a>
                   </li>
                   <li class="nav-item list-group-item border-0 p-0">
-                    <a href="pages/grupo2.html" class="dropdown-item py-2 ps-3 border-radius-md" href=" https://www.creative-tim.com/learning-lab/bootstrap/overview/material-kit ">
+                    <a href="pages/grupo2.html" class="dropdown-item py-2 ps-3 border-radius-md">
                       <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Grupo 2</h6>
                       <!-- <span class="text-sm">All about overview, quick start, license and contents</span> -->
                     </a>
                   </li>
                   <li class="nav-item list-group-item border-0 p-0">
-                    <a href="pages/grupo3.html" class="dropdown-item py-2 ps-3 border-radius-md" href=" https://www.creative-tim.com/learning-lab/bootstrap/overview/material-kit ">
+                    <a href="pages/grupo3.html" class="dropdown-item py-2 ps-3 border-radius-md">
                       <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Grupo 3</h6>
                       <!-- <span class="text-sm">All about overview, quick start, license and contents</span> -->
                     </a>
@@ -163,7 +156,6 @@
           <h3 class="lead mb-4 text-white opacity-8">Cuidemos el medio ambiente 🍃</h4>
           <h2  class="text-white">Clasificar los suelos es esencial para determinar su capacidad productiva.</h1>
           <a href="#play"><button class="btn bg-gradient-success text-white">Explorar</button></a>
-          
           
         </div>
       </div>
@@ -481,195 +473,73 @@
   
 
   <footer class="footer pt-5 mt-5">
-  <div class="container">
-    <div class=" row">
-      <div class="col-md-3 mb-4 ms-auto">
-        <div>
-          <a href="https://www.creative-tim.com/product/material-kit">
-            <img src="./assets/img/logo-ct-dark.png" class="mb-3 footer-logo" alt="main_logo">
-          </a>
-          <h6 class="font-weight-bolder mb-4">Material Kit 2</h6>
+    <div class="container">
+      <div class="mt-4 row">
+        <div class="col-md-3 ms-auto">
+          <div>
+            <!-- <a href="index.html">
+              <img src="../assets/img/logo_maiz.png" class="mb-4" alt="main_logo" style="width:40px; margin-left:32px">
+            </a> -->
+            <h5 class="font-weight-bolder mt-5 ms-6 mb-4"><span class="text-dark font-weight-bold"><span
+                  class="text-success">ECO</span>suelos</span></h5>
+          </div>
         </div>
-        <div>
-          <ul class="d-flex flex-row ms-n3 nav">
-            <li class="nav-item">
-              <a class="nav-link pe-1" href="https://www.facebook.com/CreativeTim" target="_blank">
-                <i class="fab fa-facebook text-lg opacity-8"></i>
-              </a>
-            </li>
 
-            <li class="nav-item">
-              <a class="nav-link pe-1" href="https://twitter.com/creativetim" target="_blank">
-                <i class="fab fa-twitter text-lg opacity-8"></i>
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link pe-1" href="https://dribbble.com/creativetim" target="_blank">
-                <i class="fab fa-dribbble text-lg opacity-8"></i>
-              </a>
-            </li>
-
-
-            <li class="nav-item">
-              <a class="nav-link pe-1" href="https://github.com/creativetimofficial" target="_blank">
-                <i class="fab fa-github text-lg opacity-8"></i>
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link pe-1" href="https://www.youtube.com/channel/UCVyTG4sCw-rOvB9oHkzZD1w" target="_blank">
-                <i class="fab fa-youtube text-lg opacity-8"></i>
-              </a>
-            </li>
-          </ul>
+        <div class="col-md-2 col-sm-6 col-6 mb-4">
+          <div>
+            <h6 class="text-sm">Paginas</h6>
+            <ul class="flex-column ms-n3 nav">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">
+                  Suelo
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="pages/muestras.html">
+                  Clase
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="">
+                  Subclases
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
 
-
-
-      <div class="col-md-2 col-sm-6 col-6 mb-4">
-        <div>
-          <h6 class="text-sm">Company</h6>
-          <ul class="flex-column ms-n3 nav">
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/presentation" target="_blank">
-                About Us
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/templates/free" target="_blank">
-                Freebies
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/templates/premium" target="_blank">
-                Premium Tools
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/blog" target="_blank">
-                Blog
-              </a>
-            </li>
-          </ul>
+        <div class="col-md-4 col-sm-5 col-6 mb-4">
+          <div>
+            <h6 class="text-sm">Contacto</h6>
+            <ul class="flex-column ms-n3 nav">
+              <li class="nav-item">
+                <a class="nav-link">
+                  Centro Biotecnológico del Caribe (CBC).
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link">
+                  Km 7 via la paz
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link">
+                  Valledupar - Cesar
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
 
-      <div class="col-md-2 col-sm-6 col-6 mb-4">
-        <div>
-          <h6 class="text-sm">Resources</h6>
-          <ul class="flex-column ms-n3 nav">
-            <li class="nav-item">
-              <a class="nav-link" href="https://iradesign.io/" target="_blank">
-                Illustrations
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/bits" target="_blank">
-                Bits & Snippets
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/affiliates/new" target="_blank">
-                Affiliate Program
-              </a>
-            </li>
-          </ul>
+        <div class="col-md-3 col-sm-6 col-6 mb-4 d-flex flex-column justify-content-center align-items-center">
+          <h6 class="text-sm text-success">Eres usuario o administrador</h6>
+          <a href="{{ route('login') }}" class="btn btn-sm bg-gradient-success mb-0 me-1 mt-2 mt-md-0">Iniciar
+            Sesion</a>
         </div>
-      </div>
 
-      <div class="col-md-2 col-sm-6 col-6 mb-4">
-        <div>
-          <h6 class="text-sm">Help & Support</h6>
-          <ul class="flex-column ms-n3 nav">
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/contact-us" target="_blank">
-                Contact Us
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/knowledge-center" target="_blank">
-                Knowledge Center
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="https://services.creative-tim.com/?ref=ct-mk2-footer" target="_blank">
-                Custom Development
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/sponsorships" target="_blank">
-                Sponsorships
-              </a>
-            </li>
-
-          </ul>
-        </div>
-      </div>
-
-      <div class="col-md-2 col-sm-6 col-6 mb-4 me-auto">
-        <div>
-          <h6 class="text-sm">Legal</h6>
-          <ul class="flex-column ms-n3 nav">
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/knowledge-center/terms-of-service" target="_blank">
-                Terms & Conditions
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/knowledge-center/privacy-policy" target="_blank">
-                Privacy Policy
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/license" target="_blank">
-                Licenses (EULA)
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="col-12">
-        <div class="text-center">
-          <p class="text-dark my-4 text-sm font-weight-normal">
-            All rights reserved. Copyright © <script>document.write(new Date().getFullYear())</script> Material Kit by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
-          </p>
-        </div>
       </div>
     </div>
-  </div>
 </footer>
-
-
-  
-
-  
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 <!--   Core JS Files   -->
