--- a/pages/calculos/calcular_fertilidad.html
+++ b/pages/calculos/calcular_fertilidad.html
@@ -81,31 +81,31 @@
               <ul class="navbar-nav navbar-nav-hover ms-auto">
                 <li class="nav-item dropdown dropdown-hover mx-2">
                   <a href="../../index.html" class="nav-link ps-2 d-flex cursor-pointer align-items-center"
-                    id="dropdownMenuPages" data-bs-toggle="dropdown" aria-expanded="false">
+                    id="dropdownMenuPages"   aria-expanded="false">
                     <i class="material-icons opacity-6 me-2 text-md">home</i>
                     Inicio
                   </a>
                 </li>
 
                 <li class="nav-item dropdown dropdown-hover mx-2">
-                  <a href="../../suelo.html" class="nav-link ps-2 d-flex cursor-pointer align-items-center"
-                    id="dropdownMenuPages" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a href="../suelo.html" class="nav-link ps-2 d-flex cursor-pointer align-items-center"
+                    id="dropdownMenuPages"   aria-expanded="false">
                     <i class="material-icons opacity-6 me-2 text-md"> </i>
                     Suelo
                   </a>
                 </li>
 
                 <li class="nav-item dropdown dropdown-hover mx-2">
-                  <a href="../../clases.html" class="nav-link ps-2 d-flex cursor-pointer align-items-center"
-                    id="dropdownMenuPages" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a href="../clases.html" class="nav-link ps-2 d-flex cursor-pointer align-items-center"
+                    id="dropdownMenuPages"   aria-expanded="false">
                     <i class="material-icons opacity-6 me-2 text-md"> </i>
                     Clases
                   </a>
                 </li>
 
                 <li class="nav-item dropdown dropdown-hover mx-2">
-                  <a href="../../subclases.html" class="nav-link ps-2 d-flex cursor-pointer align-items-center"
-                    id="dropdownMenuPages" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a href="../subclases.html" class="nav-link ps-2 d-flex cursor-pointer align-items-center"
+                    id="dropdownMenuPages"   aria-expanded="false">
                     <i class="material-icons opacity-6 me-2 text-md"> </i>
                     Subclases
                   </a>
@@ -124,8 +124,7 @@
                     <div class="d-none d-lg-block">
                       <ul class="list-group">
                         <li class="nav-item list-group-item border-0 p-0">
-                          <a href="../../grupo1.html" class="dropdown-item py-2 ps-3 border-radius-md"
-                            href="../../ https://www.creative-tim.com/learning-lab/bootstrap/overview/material-kit ">
+                          <a href="../grupo1.html" class="dropdown-item py-2 ps-3 border-radius-md">
                             <h6
                               class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">
                               Grupo 1</h6>
@@ -133,8 +132,7 @@
                           </a>
                         </li>
                         <li class="nav-item list-group-item border-0 p-0">
-                          <a href="../../grupo2.html" class="dropdown-item py-2 ps-3 border-radius-md"
-                            href="../../ https://www.creative-tim.com/learning-lab/bootstrap/overview/material-kit ">
+                          <a href="../grupo2.html" class="dropdown-item py-2 ps-3 border-radius-md">
                             <h6
                               class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">
                               Grupo 2</h6>
@@ -142,8 +140,7 @@
                           </a>
                         </li>
                         <li class="nav-item list-group-item border-0 p-0">
-                          <a href="../../grupo3.html" class="dropdown-item py-2 ps-3 border-radius-md"
-                            href="../../ https://www.creative-tim.com/learning-lab/bootstrap/overview/material-kit ">
+                          <a href="../grupo3.html" class="dropdown-item py-2 ps-3 border-radius-md">
                             <h6
                               class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">
                               Grupo 3</h6>
