--- a/pages/grupo2.html
+++ b/pages/grupo2.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="76x76" href= "../assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href= "../assets/img/favicon.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/logo-ct-dark.png">
+  <link rel="icon" type="image/png" href="../assets/img/logo-ct-dark.png">
   <title>
-    Suelos
+    Grupo 2
   </title>
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
@@ -15,14 +15,14 @@
   <link href= "../assets/css/nucleo-icons.css" rel="stylesheet" />
   <link href= "../assets/css/nucleo-svg.css" rel="stylesheet" />
   <!-- Font Awesome Icons -->
-  <script src="../assets/https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
   <link id="pagestyle" href= "../assets/css/material-kit.css?v=3.0.4" rel="stylesheet" />
   <!-- Nepcha Analytics (nepcha.com) -->
   <!-- Nepcha is a easy-to-use web analytics. No cookies and fully compliant with GDPR, CCPA and PECR. -->
-  <script defer data-site="YOUR_DOMAIN_HERE" src="../assets/https://api.nepcha.com/js/nepcha-analytics.js"></script>
+  <script defer data-site="YOUR_DOMAIN_HERE" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
   
 
    <!-- Favicon -->
@@ -50,21 +50,13 @@
 </head>
 
 <body class="index-page bg-gray-200">
-  <style>
-    .bg-amarillo{
-      background-color: #EDDD5E;
-    }
-    .text-amarillo{
-      color: #EDDD5E;
-    }
-  </style>
-  
-  
+
 <!-- Navbar -->
 <div class="container position-sticky z-index-sticky top-0"><div class="row"><div class="col-12">
   <nav class="navbar navbar-expand-lg  blur border-radius-xl top-0 z-index-fixed shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
     <div class="container-fluid px-0">
       <a class="navbar-brand font-weight-bolder ms-sm-3" href="/index.html" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom">
+        <img src="../assets/img/logo-ct-dark.png" alt="">
       <span class="text-xxl">ECOsuelos</span> 
       </a>
       <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
