--- a/pages/clases.html
+++ b/pages/clases.html
@@ -178,9 +178,9 @@
                           </div>
                           <div class="service-text p-5 pt-0">
                               <div class="service-icon">
-                                  <img class="img-fluid rounded-circle" src="../assets/img/pasto.jpg" alt="">
+                                <h5 class="mb-3 text-dark  text-center">Clase I</h4>
                               </div>
-                              <h5 class="mb-3">CLASE  I</h4>
+                              
                               <p class="mb-4">Las tierras de la clase 1 no presentan o tienen muy pocas limitaciones para el uso agropecuario, siendo
                                   éstas de grado ligero, fácilmente corregibles. Son aptas para una amplia diversidad de cultivos adaptados
                                   a las condiciones ecológicas, así como para ganadería intensiva con pastos de corte.</p>
@@ -194,10 +194,9 @@
                               <img class="img-fluid" src="../assets/img/caña2.jpg" alt="">
                           </div>
                           <div class="service-text p-5 pt-0">
-                              <div class="service-icon">
-                                  <img class="img-fluid rounded-circle" src="../assets/img/caña.jfif" alt="">
-                              </div>
-                              <h5 class="mb-3">CLASE  II</h5>
+                            <div class="service-icon">
+                              <h5 class="mb-3 text-dark  text-center">Clase II</h4>
+                            </div>
                               <p class="mb-4">Las tierras de la Clase 2 presentan limitaciones ligeras que pueden reducir la posibilidad de elección de
                                   plantas para cultivo y requieren prácticas de manejo fáciles de aplicar, incluyendo las de conservación,
                                   para prevenir su degradación o para mejorar la relación agua-aire.</p>
@@ -211,10 +210,9 @@
                               <img class="img-fluid" src="../assets/img/tomate2.jpg" alt="">
                           </div>
                           <div class="service-text p-5 pt-0">
-                              <div class="service-icon">
-                                  <img class="img-fluid rounded-circle" src="../assets/img/tomate.jfif" alt="">
-                              </div>
-                              <h5 class="mb-3">CLASE III</h5>
+                            <div class="service-icon">
+                              <h5 class="mb-3 text-dark  text-center">Clase III</h4>
+                            </div>
                               <p class="mb-4">La clase 3 agrupa tierras con moderadas limitaciones y restricciones para el uso por erosión, pendiente,
                                   suelo, humedad o daño, solos o combinados. Estas disminuyen las posibilidades de selección de cultivos
                                   y las épocas de siembra e implican prácticas adecuadas de labranza y cosecha.</p>
@@ -233,10 +231,9 @@
                               <img class="img-fluid" src="../assets/img/cafe.webp" alt="">
                           </div>
                           <div class="service-text p-5 pt-0">
-                              <div class="service-icon">
-                                  <img class="img-fluid rounded-circle" src="../assets/img/OIP (1).jfif" alt="">
-                              </div>
-                              <h5 class="mb-3">CLASE  IV </h4>
+                            <div class="service-icon">
+                              <h5 class="mb-3 text-dark  text-center">Clase IV</h4>
+                            </div>
                               <p class="mb-4">Las tierras de la clase 4 tienen limitaciones severas que la restringen a cultivos específicos y exigen
                                   prácticas cuidadosas de manejo y conservación difíciles de aplicar y mantener. Se pueden utilizar en
                                   ganadería con pastos de buenos rendimientos y con un manejo técnico de los potreros. La agroforesteria
@@ -252,10 +249,9 @@
                               <img class="img-fluid" src="../assets/img/arroz.jpg" alt="">
                           </div>
                           <div class="service-text p-5 pt-0">
-                              <div class="service-icon">
-                                  <img class="img-fluid rounded-circle" src="../assets/img/arroz.1.jpg" alt="">
-                              </div>
-                              <h5 class="mb-3">CLASE  V </h5>
+                            <div class="service-icon">
+                              <h5 class="mb-3 text-dark  text-center">Clase V</h4>
+                            </div>
                               <p class="mb-4">La clase 5 es una clase potencial que tiene limitaciones severas para el uso que son factibles de
                                   modificar, disminuir o eliminar, con cierto grado de dificultad y con altos costos económicos.
                                   El uso de las tierras en estado natural se limita a agricultura y ganadería estacional escasamente
@@ -270,10 +266,9 @@
                               <img class="img-fluid" src="../assets/img/piña.jpg" alt="">
                           </div>
                           <div class="service-text p-5 pt-0">
-                              <div class="service-icon">
-                                  <img class="img-fluid rounded-circle" src="../assets/img/piña.1.jpg" alt="">
-                              </div>
-                              <h5 class="mb-3">CLASE  VI</h5>
+                            <div class="service-icon">
+                              <h5 class="mb-3 text-dark  text-center">Clase VI</h4>
+                            </div>
                               <p class="mb-4">Las tierras de la clase 6 presentan limitaciones muy severas que en términos generales, las hacen aptas
                                   únicamente para algunos cultivos semi perennes o perennes, semi densos y densos; también se pueden
                                   desarrollar sistemas agroforestales y forestales. </p>
@@ -290,10 +285,9 @@
                                       <img class="img-fluid" src="../assets/img/bosques.jpg" alt="">
                                   </div>
                                   <div class="service-text p-5 pt-0">
-                                      <div class="service-icon">
-                                          <img class="img-fluid rounded-circle" src="../assets/img/bosques.1.jpg" alt="">
-                                      </div>
-                                      <h5 class="mb-3">CLASE  VII</h4>
+                                    <div class="service-icon">
+                                      <h5 class="mb-3 text-dark  text-center">Clase VII</h4>
+                                    </div>
                                       <p class="mb-4">Las tierras de clase 7 presentan limitaciones fuertemente severas, que las hacen inadecuadas para
                                           cultivos; tienen aptitud forestal; el bosque tiene carácter protector, pero cuando las condiciones del relieve
                                           o la topografía y los suelos ofrecen suficiente profundidad efectiva para el anclaje y el desarrollo normal
@@ -311,10 +305,9 @@
                                       <img class="img-fluid" src="../assets/img/par.jpg" alt="">
                                   </div>
                                   <div class="service-text p-5 pt-0">
-                                      <div class="service-icon">
-                                          <img class="img-fluid rounded-circle" src="../assets/img/par.1.jpg" alt="">
-                                      </div>
-                                      <h5 class="mb-3">CLASE  VIII</h5>
+                                    <div class="service-icon">
+                                      <h5 class="mb-3 text-dark  text-center">Clase VIII</h4>
+                                    </div>
                                       <p class="mb-4">Son tierras que por su vulnerabilidad extrema (áreas muy escarpadas) o por su importancia como
                                           ecosistemas estratégicos (páramo) para la regulación del recurso hídrico y por su interés científico, deben
                                           destinarse a la conservación de la naturaleza o a su recuperación en el caso de que hayan sido
