--- a/pages/suelo.html
+++ b/pages/suelo.html
@@ -272,10 +272,9 @@
                               <img class="img-fluid" src="../assets/img/img.3.jpg" alt="">
                           </div>
                           <div class="service-text p-5 pt-0">
-                              <div class="service-icon">
-                                  <img class="img-fluid rounded-circle" src="../assets/img/suelos-arenosos.jpg" alt="">
-                              </div>
-                              <h5 class="mb-3">"Suelo Arenoso"</h4>
+                            <div class="service-icon">
+                              <h5 class="mb-3 text-dark  text-center">Arenoso</h4>
+                            </div>
                               <p class="mb-4">Los suelos arenosos son aquellos que se caracterizan por presentar un contenido de más del 70% de arena en los primeros cien centímetros de profundidad. Es decir, están formados por fragmentos de rocas y minerales de mínimo tamaño. El contenido de arcillas en estos suelos es menor al 15%.
     
                               </p>
@@ -289,10 +288,9 @@
                               <img class="img-fluid" src="../assets/img/Suelo-limoso-6.jpg" alt="">
                           </div>
                           <div class="service-text p-5 pt-0">
-                              <div class="service-icon">
-                                  <img class="img-fluid rounded-circle" src="../assets/img/Suelo-limoso.jpg" alt="">
-                              </div>
-                              <h5 class="mb-3">"Suelo Limoso"</h5>
+                            <div class="service-icon">
+                              <h5 class="mb-3 text-dark  text-center">Limoso</h4>
+                            </div>
                               <p class="mb-4">	
                                   El suelo limoso es aquel que está compuesto en mayor medida por el limo, un sedimento cuyo tamaño no supera los 0,05 milímetros. Dado su tamaño tan pequeño y liviano, es transportado a través de las corrientes de aire y de los ríos y es depositado en distintas zonas, especialmente en aquellas cercanas a los cauces de los ríos.
                                   </p>
@@ -306,10 +304,9 @@
                               <img class="img-fluid" src="../assets/img/suelo.arcilloso.jpg" alt="">
                           </div>
                           <div class="service-text p-5 pt-0">
-                              <div class="service-icon">
-                                  <img class="img-fluid rounded-circle" src="../assets/img/OIP.jfif" alt="">
-                              </div>
-                              <h5 class="mb-3">"Suelo Arcilloso"</h5>
+                            <div class="service-icon">
+                              <h5 class="mb-3 text-dark  text-center">Arcilloso</h4>
+                            </div>
                               <p class="mb-4">El suelo arcilloso a menudo es llamado «suelo pesado». En la agricultura en el suelo arcilloso puede presentar un gran desafío principalmente debido al pobre drenaje del suelo. El suelo arcilloso también tiende a compactarse y deshacerse en terrones cuando se lo cultiva, pisa o trabaja cuando está húmedo.
     
                               </p>
