--- a/index.html
+++ b/index.html
@@ -222,22 +222,19 @@
                         <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
                             <div class="text-center bg-success py-3 px-4">
                                 <img class="img-fluid mb-4" src=" assets/img/ft.6.webp" alt="">
-                                <!--h1 class="display-6 text-white" data-toggle="counter-up">25</h1-->
-                                <span class="fs-5 fw-semi-bold text-amarillo">Suelo Arenoso</span>
+                                <span class="fs-5 fw-semi-bold text-white">Suelo Arenoso</span>
                             </div>
                         </div>
                         <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
                             <div class="text-center bg-success py-3 px-4">
                                 <img class="img-fluid mb-4" src=" assets/img/limoso.jpg" alt="">
-                                <!--h1 class="display-6" data-toggle="counter-up">183</h1-->
-                                <span class="fs-5 fw-semi-bold text-amarillo">Suelo Limoso</span>
+                                <span class="fs-5 fw-semi-bold text-white">Suelo Limoso</span>
                             </div>
                         </div>
                         <div class="col-sm-6 ms-9 wow fadeIn" data-wow-delay="0.5s">
                             <div class="text-center bg-success py-3 px-4">
                                 <img class="img-fluid mb-4" src=" assets/img/ft1.jpg" alt="">
-                                <!--h1 class="display-6" data-toggle="counter-up"></h1-->
-                                <span class="fs-5 fw-semi-bold text-amarillo">Suelo Arcilloso</span>
+                                <span class="fs-5 fw-semi-bold text-white">Suelo Arcilloso</span>
                             </div>
                         </div>
                     </div>
