--- a/pages/calcular.html
+++ b/pages/calcular.html
@@ -531,17 +531,17 @@
             <h6 class="text-sm">Paginas</h6>
             <ul class="flex-column ms-n3 nav">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="suelo.html">
                   Suelo
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pages/muestras.html">
+                <a class="nav-link" href="clases.html">
                   Clase
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">
+                <a class="nav-link" href="subclases.html">
                   Subclases
                 </a>
               </li>
