--- a/pages/suelo.html
+++ b/pages/suelo.html
@@ -176,18 +176,18 @@
                                   <small class="fs-5 text-white fw-bold">Natural</small>
                               </div>
                           </div>
-                          <div class="col-6 wow fadeIn" data-wow-delay="0.1s">
+                          <div class="col-6 wow fadeIn"  >
                               <img class="img-fluid rounded" src="../assets/img/dron.jpg">
                           </div>
                           <div class="col-6 wow fadeIn" data-wow-delay="0.3s">
                               <img class="img-fluid rounded" src="../assets/img/dron2.jpg">
                           </div>
-                          <div class="col-6 wow fadeIn" data-wow-delay="0.5s">
+                          <div class="col-6 wow fadeIn"  >
                               <img class="img-fluid rounded" src="../assets/img/dron3.jpg">
                           </div>
                       </div>
                   </div>
-                  <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+                  <div class="col-lg-6 wow fadeIn"  >
                       <p class="section-title text-start text-success pe-3" style="background-color: #efeff0;">información.</p>
                       <h1 class="mb-4">Conoce un poco mas sobre nuestros  Suelos.</h1>
                       <p class="mb-4">Según su textura podemos distinguir 4 tipos de suelos: arena, arcilla , pedregoso y limo. La arena es la que existe en los diversos ríos. Los suelos arenosos, como son más sueltos son fáciles de trabajar pero tienen pocas reservas de nutrientes aprovechables por las plantas.</p>
@@ -214,7 +214,7 @@
     
     
       <!-- Banner Start -->
-      <div class="container-fluid bg-dark banner my-5 py-5">
+      <div class="container-fluid banner border-top-lg border-bottom-lg my-5 py-5">
           <div class="container py-5">
               <div class="row g-5">
                   <div class="col-lg-6 wow fadeIn" data-wow-delay="0.3s">
@@ -223,8 +223,8 @@
                               <img class="img-fluid rounded" src="../assets/img/ft.7.webp" alt="">
                           </div>
                           <div class="col-sm-8">
-                              <h2 class="text-white mb-3">Recomendaciones.</h2>
-                              <p class="text-white mb-4">La clasificación por capacidad de uso es de carácter interpretativo y se fundamenta en los efectos 
+                              <h2 class="text-dark mb-3">Recomendaciones.</h2>
+                              <p class="text-dark mb-4">La clasificación por capacidad de uso es de carácter interpretativo y se fundamenta en los efectos 
                                   combinados del clima ambiental y las características permanentes de los suelos, sobre los riesgos de 
                                   deterioro, las limitaciones en su uso, la capacidad de producción y los requerimientos de manejo del 
                                   suelo.
@@ -236,14 +236,14 @@
                           </div>
                       </div>
                   </div>
-                  <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+                  <div class="col-lg-6 wow fadeIn"  >
                       <div class="row g-4 align-items-center">
                           <div class="col-sm-4">
                               <img class="img-fluid rounded" src="../assets/img/ft.6.webp" alt="">
                           </div>
                           <div class="col-sm-8">
-                              <h2 class="text-white mb-3">Categorias.</h2>
-                              <p class="text-white mb-4">La estructura funcional del sistema de clasificación de tierras por su capacidad de uso, se integra por tres 
+                              <h2 class="text-dark mb-3">Categorias.</h2>
+                              <p class="text-dark mb-4">La estructura funcional del sistema de clasificación de tierras por su capacidad de uso, se integra por tres 
                                   categorías fundamentalmente.
                                   <br>
                                   <br> 
@@ -261,12 +261,12 @@
       <!-- Banner End -->
       <div class="container-xxl py-5">
           <div class="container">
-              <div class="text-center mx-auto pb-4 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+              <div class="text-center mx-auto pb-4 wow fadeInUp"   style="max-width: 500px;">
                   <p class="section-title text-center text-success px-3" style="background-color: #fcfcfe;">Tipos De Suelos.</p>
                   <h1 class="mb-5">Clasificacion de los suelos. </h1>
               </div>
               <div class="row gy-5 gx-4">
-                  <div class="col-lg-4 col-md-6 pt-5 wow fadeInUp" data-wow-delay="0.1s">
+                  <div class="col-lg-4 col-md-6 pt-5 wow fadeInUp"  >
                       <div class="service-item d-flex h-100">
                           <div class="service-img">
                               <img class="img-fluid" src="../assets/img/img.3.jpg" alt="">
@@ -298,7 +298,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="col-lg-4 col-md-6 pt-5 wow fadeInUp" data-wow-delay="0.5s">
+                  <div class="col-lg-4 col-md-6 pt-5 wow fadeInUp"  >
                       <div class="service-item d-flex h-100">
                           <div class="service-img">
                               <img class="img-fluid" src="../assets/img/suelo.arcilloso.jpg" alt="">
@@ -321,12 +321,12 @@
       <!-- Team Start -->
       <div class="container-xxl py-5">
           <div class="container">
-              <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+              <div class="text-center mx-auto wow fadeInUp"   style="max-width: 500px;">
                   <p class="section-title bg-white text-center text-success px-3"></p>
                   <h1 class="mb-5">Algunos cultivos en nuestros suelo.</h1>
               </div>
               <div class="row g-4">
-                  <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                  <div class="col-lg-4 col-md-6 wow fadeInUp"  >
                       <div class="team-item rounded p-4">
                           <img class="img-fluid rounded mb-4" src="../assets/img/maiz.webp" alt="">
                           <h5>Maiz</h5>
@@ -346,7 +346,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                  <div class="col-lg-4 col-md-6 wow fadeInUp"  >
                       <div class="team-item rounded p-4">
                           <img class="img-fluid rounded mb-4" src="../assets/img/sand.jpg" alt="">
                           <h5>Sandia</h5>
@@ -368,177 +368,75 @@
 
   
 
-  <footer class="footer pt-5 mt-5">
+<footer class="footer pt-5">
   <div class="container">
-    <div class=" row">
-      <div class="col-md-3 mb-4 ms-auto">
+    <div class="mt-4 row">
+      <div class="col-md-3 ms-auto">
         <div>
-          <a href="https://www.creative-tim.com/product/material-kit">
-            <img src="assets/img/logo-ct-dark.png" class="mb-3 footer-logo" alt="main_logo">
-          </a>
-          <h6 class="font-weight-bolder mb-4">Material Kit 2</h6>
-        </div>
-        <div>
-          <ul class="d-flex flex-row ms-n3 nav">
-            <li class="nav-item">
-              <a class="nav-link pe-1" href="https://www.facebook.com/CreativeTim" target="_blank">
-                <i class="fab fa-facebook text-lg opacity-8"></i>
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link pe-1" href="https://twitter.com/creativetim" target="_blank">
-                <i class="fab fa-twitter text-lg opacity-8"></i>
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link pe-1" href="https://dribbble.com/creativetim" target="_blank">
-                <i class="fab fa-dribbble text-lg opacity-8"></i>
-              </a>
-            </li>
-
-
-            <li class="nav-item">
-              <a class="nav-link pe-1" href="https://github.com/creativetimofficial" target="_blank">
-                <i class="fab fa-github text-lg opacity-8"></i>
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link pe-1" href="https://www.youtube.com/channel/UCVyTG4sCw-rOvB9oHkzZD1w" target="_blank">
-                <i class="fab fa-youtube text-lg opacity-8"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-
-
-      <div class="col-md-2 col-sm-6 col-6 mb-4">
-        <div>
-          <h6 class="text-sm">Company</h6>
-          <ul class="flex-column ms-n3 nav">
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/presentation" target="_blank">
-                About Us
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/templates/free" target="_blank">
-                Freebies
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/templates/premium" target="_blank">
-                Premium Tools
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/blog" target="_blank">
-                Blog
-              </a>
-            </li>
-          </ul>
+          <!-- <a href="index.html">
+            <img src="../assets/img/logo_maiz.png" class="mb-4" alt="main_logo" style="width:40px; margin-left:32px">
+          </a> -->
+          <h5 class="font-weight-bolder mt-5 ms-6 mb-4"><span class="text-dark font-weight-bold"><span
+                class="text-success">ECO</span>suelos</span></h5>
         </div>
       </div>
 
       <div class="col-md-2 col-sm-6 col-6 mb-4">
         <div>
-          <h6 class="text-sm">Resources</h6>
+          <h6 class="text-sm">Paginas</h6>
           <ul class="flex-column ms-n3 nav">
             <li class="nav-item">
-              <a class="nav-link" href="https://iradesign.io/" target="_blank">
-                Illustrations
+              <a class="nav-link" href="suelo.html">
+                Suelo
               </a>
             </li>
-
             <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/bits" target="_blank">
-                Bits & Snippets
+              <a class="nav-link" href="clases.html">
+                Clase
               </a>
             </li>
-
             <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/affiliates/new" target="_blank">
-                Affiliate Program
+              <a class="nav-link" href="subclases.html">
+                Subclases
               </a>
             </li>
           </ul>
         </div>
       </div>
 
-      <div class="col-md-2 col-sm-6 col-6 mb-4">
+      <div class="col-md-4 col-sm-5 col-6 mb-4">
         <div>
-          <h6 class="text-sm">Help & Support</h6>
+          <h6 class="text-sm">Contacto</h6>
           <ul class="flex-column ms-n3 nav">
             <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/contact-us" target="_blank">
-                Contact Us
+              <a class="nav-link">
+                Centro Biotecnológico del Caribe (CBC).
               </a>
             </li>
-
             <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/knowledge-center" target="_blank">
-                Knowledge Center
+              <a class="nav-link">
+                Km 7 via la paz
               </a>
             </li>
-
             <li class="nav-item">
-              <a class="nav-link" href="https://services.creative-tim.com/?ref=ct-mk2-footer" target="_blank">
-                Custom Development
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/sponsorships" target="_blank">
-                Sponsorships
-              </a>
-            </li>
-
-          </ul>
-        </div>
-      </div>
-
-      <div class="col-md-2 col-sm-6 col-6 mb-4 me-auto">
-        <div>
-          <h6 class="text-sm">Legal</h6>
-          <ul class="flex-column ms-n3 nav">
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/knowledge-center/terms-of-service" target="_blank">
-                Terms & Conditions
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/knowledge-center/privacy-policy" target="_blank">
-                Privacy Policy
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.creative-tim.com/license" target="_blank">
-                Licenses (EULA)
+              <a class="nav-link">
+                Valledupar - Cesar
               </a>
             </li>
           </ul>
         </div>
       </div>
 
-      <div class="col-12">
-        <div class="text-center">
-          <p class="text-dark my-4 text-sm font-weight-normal">
-            All rights reserved. Copyright © <script>document.write(new Date().getFullYear())</script> Material Kit by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
-          </p>
-        </div>
+      <div class="col-md-3 col-sm-6 col-6 mb-4 d-flex flex-column justify-content-center align-items-center">
+        <h6 class="text-sm text-success">Eres usuario o administrador</h6>
+        <a href="login.html" class="btn btn-sm bg-gradient-success mb-0 me-1 mt-2 mt-md-0">Iniciar
+          Sesion</a>
       </div>
+
     </div>
   </div>
 </footer>
+
 
 
   
