CAMBIO CON LOGICA PISOS TERMICOS

--- a/pages/calcular.html
+++ b/pages/calcular.html
@@ -343,56 +343,56 @@
               <div class="col-lg-3 ms-6 mt-5">
                 <label class="text-dark font-weight-bold"> Movimiento de masa</label>
                 <div class="input-group input-group-static">
-                  <input type="number" class="form-control" placeholder="complete este campo" aria-label="complete este campo">
+                  <input type="number" class="form-control" id="movimientoMasa" placeholder="complete este campo" aria-label="complete este campo">
                 </div>
               </div>
               <!-- .......... -->
               <div class="col-lg-3 mt-5">
                 <label class="text-dark font-weight-bold">Drenaje natural</label>
                 <div class="input-group input-group-static">
-                  <input type="number" class="form-control" placeholder="complete este campo" aria-label="complete este campo">
+                  <input type="number" class="form-control" placeholder="complete este campo" id="drenajeNatural" aria-label="complete este campo" value="25">
                 </div>
               </div>
               <!-- .......... -->
               <div class="col-lg-3 ms-6 mt-5">
                 <label class="text-dark font-weight-bold">Inundaciones</label>
                 <div class="input-group input-group-static">
-                  <input type="number" class="form-control" placeholder="complete este campo" aria-label="complete este campo">
+                  <input type="number" class="form-control" id="inundaciones" placeholder="complete este campo" aria-label="complete este campo">
                 </div>
               </div>
               <!-- .......... -->
               <div class="col-lg-3 ms-6 mt-5">
                 <label class="text-dark font-weight-bold">Encharcamientos</label>
                 <div class="input-group input-group-static">
-                  <input type="number" class="form-control" placeholder="complete este campo" aria-label="complete este campo">
+                  <input type="number" class="form-control" placeholder="complete este campo" id="encharcamientos" aria-label="complete este campo">
                 </div>
               </div>
               <!-- .......... -->
               <div class="col-lg-3 mt-5">
                 <label class="text-dark font-weight-bold"> Profundidad efectiva</label>
                 <div class="input-group input-group-static">
-                  <input type="number" class="form-control" placeholder="complete este campo" aria-label="complete este campo">
+                  <input type="number" class="form-control" id="profundidad" placeholder="complete este campo" aria-label="complete este campo">
                 </div>
               </div>
               <!-- .......... -->
               <div class="col-lg-3 ms-6 mt-5">
                 <label class="text-dark font-weight-bold"> Textura</label>
                 <div class="input-group input-group-static">
-                  <input type="number" class="form-control" placeholder="complete este campo" aria-label="complete este campo">
+                  <input type="number" class="form-control" id="textura" placeholder="complete este campo" aria-label="complete este campo">
                 </div>
               </div>
               <!-- .......... -->
               <div class="col-lg-3 ms-6 mt-5">
                 <label class="text-dark font-weight-bold">Pedregosidad superficial</label>
                 <div class="input-group input-group-static">
-                  <input type="number" class="form-control" placeholder="complete este campo" aria-label="complete este campo">
+                  <input type="number" class="form-control" id="pedregosidad" placeholder="complete este campo" aria-label="complete este campo">
                 </div>
               </div>
               <!-- .......... -->
               <div class="col-lg-3 mt-5">
                 <label class="text-dark font-weight-bold"> Afloramiento rocoso</label>
                 <div class="input-group input-group-static">
-                  <input type="number" class="form-control" placeholder="complete este campo" aria-label="complete este campo">
+                  <input type="number" class="form-control" id="afloramiento" placeholder="complete este campo" aria-label="complete este campo">
                 </div>
               </div>
               <!-- .......... -->
@@ -423,63 +423,63 @@
               <div class="col-lg-3 ms-6 mt-5">
                 <label class="text-dark font-weight-bold"> Contenido de sales</label>
                 <div class="input-group input-group-static">
-                  <input type="number" class="form-control" placeholder="complete este campo" aria-label="complete este campo">
+                  <input type="number" class="form-control" id="contenidoSales" placeholder="complete este campo" aria-label="complete este campo">
                 </div>
               </div>
               <!-- .......... -->
               <div class="col-lg-3 mt-5">
                 <label class="text-dark font-weight-bold">Contenido de sodio(Na)</label>
                 <div class="input-group input-group-static">
-                  <input type="number" class="form-control" placeholder="complete este campo" aria-label="complete este campo">
+                  <input type="number" class="form-control" id="contenidoSodio" placeholder="complete este campo" aria-label="complete este campo">
                 </div>
               </div>
               <!-- .......... -->
               <div class="col-lg-3 ms-6 mt-5">
                 <label class="text-dark font-weight-bold"> Sales y sodio(Na)</label>
                 <div class="input-group input-group-static">
-                  <input type="number" class="form-control" placeholder="complete este campo" aria-label="complete este campo">
+                  <input type="number" class="form-control" id="sales_Sodio" placeholder="complete este campo" aria-label="complete este campo">
                 </div>
               </div>
               <!-- .......... -->
               <div class="col-lg-3 ms-6 mt-5">
                 <label class="text-dark font-weight-bold">Ca/Mg</label>
                 <div class="input-group input-group-static">
-                  <input type="number" class="form-control" placeholder="complete este campo" aria-label="complete este campo">
+                  <input type="number" class="form-control" id="ca_mg" placeholder="complete este campo" aria-label="complete este campo">
                 </div>
               </div>
               <!-- .......... -->
               <div class="col-lg-3 mt-5">
                 <label class="text-dark font-weight-bold"> Saturacion de aluminio</label>
                 <div class="input-group input-group-static">
-                  <input type="number" class="form-control" placeholder="complete este campo" aria-label="complete este campo">
+                  <input type="number" class="form-control" id="saturacionAluminio" placeholder="complete este campo" aria-label="complete este campo">
                 </div>
               </div>
               <!-- .......... -->
               <div class="col-lg-3 ms-6 mt-5">
                 <label class="text-dark font-weight-bold">Distribucion de lluvia</label>
                 <div class="input-group input-group-static">
-                  <input type="number" class="form-control" placeholder="complete este campo" aria-label="complete este campo">
+                  <input type="number" class="form-control" id="distribucionLluvia" placeholder="complete este campo" aria-label="complete este campo">
                 </div>
               </div>
               <!-- .......... -->
               <div class="col-lg-3 ms-6 mt-5">
                 <label class="text-dark font-weight-bold">Pisos termicos</label>
                 <div class="input-group input-group-static">
-                  <input type="number" class="form-control" placeholder="complete este campo" aria-label="complete este campo">
+                  <input type="number" class="form-control" id="pisosTermicos" placeholder="complete este campo" aria-label="complete este campo">
                 </div>
               </div>
               <!-- .......... -->
               <div class="col-lg-3 me-6 mt-5">
                 <label class="text-dark font-weight-bold">Condicion de humedad</label>
                 <div class="input-group input-group-static">
-                  <input type="number" class="form-control" placeholder="complete este campo" aria-label="complete este campo">
+                  <input type="number" class="form-control" id="condicionHumedad" placeholder="complete este campo" aria-label="complete este campo">
                 </div>
               </div>
               <!-- .......... -->
               <div class="col-lg-3 mt-5">
                 <label class="text-dark font-weight-bold">Temperatura heladera</label>
                 <div class="input-group input-group-static">
-                  <input type="number" class="form-control" placeholder="complete este campo" aria-label="complete este campo">
+                  <input type="number" class="form-control" id="temperatura" placeholder="complete este campo" aria-label="complete este campo">
                 </div>
               </div>
               <!-- .......... -->
@@ -591,7 +591,6 @@
   <!--  Google Maps Plugin    -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
   <script src="../assets/js/material-kit.min.js?v=3.0.4" type="text/javascript"></script>
-  <script src="../assets/js/sugerencias/sug_analisis.js"></script>
   <script src="../assets/js/menu_global.js"></script>
   <script src="../assets/js/calculos/calcular-proceso.js"></script>
 </body>
